Add zip include option
